--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
+<!-- let the browser know it`s an html5,Appear once,at the top of yhe page -->
 <html lang="en">
+    <!-- Root of an HTML Document  -->
 <head>
     <meta charset="UTF-8">
+    <!-- title tag contains the information about the HTML document  -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <!-- this is Body of our html page  -->
     <h1>Welcome To HTML Tutorial </h1>
 </body>
 </html>
