--- a/HTML/heading.html
+++ b/HTML/heading.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heading</title>
-</head>
-<body>
-    <h1>Heading</h1>
-    <h2>Heading</h2>
-    <h3>Heading</h3>
-    <h4>Heading</h4>
-    <h5>Heading</h5>
-    <h6>Heading</h6>
-</body>
+<html>
+    <head>
+        <title>Title</title>
+    </head>
+    <body>
+        <h1>This is Heading Tag </h1>
+        <h2>This is Heading Tag </h2>
+        <h3>This is Heading Tag </h3>
+        <h4>This is Heading Tag </h4>
+        <h5>This is Heading Tag </h5>
+        <h6>This is Heading Tag </h6>
+        <!-- comment in html  -->
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis impedit odio quae. Eveniet dolores culpa in aut aperiam? <br> Pariatur qui facere officia fugit iste quae consectetur libero esse ducimus veniam?</p>
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis impedit odio quae. Eveniet dolores culpa in aut aperiam? Pariatur qui facere officia fugit iste quae consectetur libero esse ducimus veniam?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis impedit odio quae. Eveniet dolores culpa in aut aperiam? Pariatur qui facere officia fugit iste quae consectetur libero esse ducimus veniam?</p>
+    </body>
 </html>
