--- a/HTML/Image.html
+++ b/HTML/Image.html
@@ -6,6 +6,21 @@
     <title>IMAGE</title>
 </head>
 <body>
-    <img src="./img.jpg" alt="#image" style="width: 200px; height: 200px; ">
+    <!-- <img src="./img.jpg" alt="This in image " length ="500px" height="500px">
+    <a href="https://www.youtube.com/watch?v=5ccq_nLHneE&t=12395s"><img src="./img.jpg" alt="This in image " length ="500px" height="501px"></a>
+    <a href="https://www.javatpoint.com/multithreading-in-java"><img src="./img.jpg" alt="This in image " length ="500px" height="501px"></a> -->
+
+ <!-- other method to use image clickable -->
+    <img usemap="#map" src="./img.jpg" alt="#image"
+    weidth="500px" height="500px"
+    src="https://www.javatpoint.com/multithreading-in-java"
+    >
+    <map name="map">
+        <area shape="rect" coords="0,0,300,450" href="https://www.javatpoint.com/multithreading-in-java" alt="">
+    </map>
+
+    
+
+
 </body>
 </html>
